2004-09-19  Michael Albinus <michael.albinus@gmx.de>

	Version 2.1.2 released.

	* tramp.el (tramp-handle-substitute-in-file-name): Implementation
	reworked.  It handles now both "//" and "/~" for URL syntax.
	(top): Undefine also "~" in `read-file-name-map' when syntax is
	'url.  Needed for XEmacs.

	* tramp-efs.el, tramp-ftp.el (top): Add
	`tramp-handle-substitute-in-file-name' to respective file name
	handler.  Doesn't seem to work for EFS yet.

2004-09-08  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-perl-decode): Fixed an error in Perl
	implementation.  $pending must be cleared every loop.  Reported by
	Benjamin Place <benjaminplace@sprintmail.com>

2004-09-05  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (top): Undefine "/" in `read-file-name-map' when syntax
	is 'url.  Otherwise, XEmacs would break the syntax with
	`minibuffer-electric-separator'.

2004-09-04  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-efs.el (all): Rename `tramp-postfix-single-method-*' to
	`tramp-postfix-method-*'.

2004-08-31  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-maybe-open-connection): The echo command
	encloses every single word with '\"'.  Otherwise, the message
	could be detected during connection already, and Tramp raises a
	false error.

2004-08-29  Michael Albinus  <michael.albinus@gmx.de>

	Adding URL syntax.

	* tramp.el (tramp-unified-filenames): Renamed to `tramp-syntax'.
	(tramp-prefix-format, tramp-prefix-regexp, tramp-method-regexp)
	(tramp-postfix-method-regexp, tramp-user-regexp)
	(tramp-postfix-user-format, tramp-postfix-user-regexp)
	(tramp-host-regexp, tramp-host-with-port-regexp)
	(tramp-postfix-host-format, tramp-postfix-host-regexp)
	(tramp-localname-regexp, tramp-file-name-structure)
	(tramp-file-name-regexp, tramp-completion-file-name-regexp):
	Defcustom changed to defconst.  Partly syntax clarified, e.g. no
	regexp is optional any longer.
	(tramp-postfix-single-method-format): Renamed to